--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -15,11 +15,11 @@
             android:id="@+id/homepage_location"
             style="@style/text_14_dark_gray"
             android:layout_gravity="center_vertical"
-            android:drawableRight="@drawable/icon_arrow_down"
             android:drawablePadding="@dimen/dp_2"
+            android:drawableRight="@drawable/icon_arrow_down"
             android:text="潮州"
             />
-        
+
         <EditText
             android:id="@+id/homepage_search"
             style="@style/search_edit"
@@ -37,13 +37,6 @@
             android:src="@drawable/scan_code"
             />
     </LinearLayout>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/homepage_tab"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
 
     <TextView
         android:id="@+id/homepage_store1"
@@ -78,18 +71,6 @@
         android:text="店铺：918003175762620416"
         />
 
-
-    <TextView
-        android:id="@+id/homepage_order"
-        android:layout_width="@dimen/dp_180"
-        android:layout_height="@dimen/dp_40"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp_40"
-        android:background="@color/main_white"
-        android:gravity="center"
-        android:text="确认订单"
-        />
-
     <TextView
         android:id="@+id/homepage_aftersale_list"
         android:layout_width="@dimen/dp_180"
@@ -98,18 +79,7 @@
         android:layout_marginTop="@dimen/dp_40"
         android:background="@color/main_white"
         android:gravity="center"
-        android:text="售后申请列表"
-        />
-
-    <TextView
-        android:id="@+id/homepage_aftersale_service"
-        android:layout_width="@dimen/dp_180"
-        android:layout_height="@dimen/dp_40"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp_8"
-        android:background="@color/main_white"
-        android:gravity="center"
-        android:text="售后服务"
+        android:text="售后列表"
         />
 
     <TextView
@@ -117,11 +87,19 @@
         android:layout_width="@dimen/dp_180"
         android:layout_height="@dimen/dp_40"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_8"
         android:background="@color/main_white"
         android:gravity="center"
         android:text="降价拍"
         />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/homepage_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <include layout="@layout/view_split_bar_light"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/homepage_viewpager"
