--- a/app/src/main/res/layout/fragment_inform.xml
+++ b/app/src/main/res/layout/fragment_inform.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-							android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <FrameLayout
         style="@style/title_title"
@@ -14,7 +15,8 @@
             android:layout_height="@dimen/dp_24"
             android:layout_gravity="left|center"
             android:layout_marginLeft="@dimen/dp_10"
-						android:src="@drawable/ic_logout_avatar"/>
+            android:src="@drawable/ic_logout_avatar"
+            app:round="true"/>
             
         <android.support.design.widget.TabLayout
             android:id="@+id/inform_detail_tab"
