--- a/app/src/main/res/layout/activity_errand_book.xml
+++ b/app/src/main/res/layout/activity_errand_book.xml
@@ -16,4 +16,445 @@
             android:text="帮我买"/>
     </FrameLayout>
 
+    <include layout="@layout/view_split_bar_light"/>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_10">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/errand_book_things_type"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_106"
+                />
+
+            <cn.czyugang.tcg.client.widget.LabelLayout
+                android:id="@+id/errand_book_things_type_labels"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_24"
+                />
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginTop="@dimen/dp_16"
+                >
+
+                <EditText
+                    android:id="@+id/errand_book_input_goods"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_80"
+                    android:layout_marginRight="@dimen/dp_70"
+                    android:background="@drawable/border_rect_grey"
+                    android:gravity="left|top"
+                    android:hint="请输入商品名称、购买数量、注意事项等具体要求"
+                    android:padding="@dimen/dp_8"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="@dimen/sp_14"
+                    />
+
+                <ImageView
+                    android:id="@+id/errand_book_upload_img"
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="@dimen/dp_15"
+                    android:layout_marginTop="@dimen/dp_18"
+                    android:src="@drawable/icon_take_photo"/>
+
+                <TextView
+                    android:layout_width="@dimen/dp_60"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="@dimen/dp_48"
+                    android:gravity="center_horizontal"
+                    android:text="添加图片"
+                    android:textColor="@color/text_dark_gray"
+                    android:textSize="@dimen/dp_12"/>
+            </FrameLayout>
+
+            <cn.czyugang.tcg.client.utils.img.ImgView
+                android:layout_width="@dimen/dp_100"
+                android:layout_height="@dimen/dp_100"
+                android:layout_marginTop="@dimen/dp_12"/>
+
+            <!--预计商品费用-->
+            <TextView
+                style="@style/text_16_black"
+                android:layout_marginTop="@dimen/dp_12"
+                android:text="预计商品费用"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_38"
+                android:layout_marginTop="@dimen/dp_12"
+                android:background="@drawable/border_rect_grey"
+                android:gravity="left|center_vertical"
+                android:hint="商品费用请与跑腿小哥当面结算喔"
+                android:padding="@dimen/dp_8"
+                android:textColorHint="@color/text_gray"
+                android:textColor="@color/main_red"
+                android:textSize="@dimen/sp_14"
+                />
+
+            <!--物品重量(kg)-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_14">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="物品重量(kg)"/>
+
+                <cn.czyugang.tcg.client.widget.GoodsPlusMinusView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
+
+            <!--物品体积-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_14">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="物品体积"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="请选择物品体积大小"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--物品价值-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_14">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="物品价值"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="50元以下"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--        地址      -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_40"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/text_16_black"
+                    android:layout_marginBottom="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:text="地址"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_marginBottom="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:paddingLeft="@dimen/dp_2"
+                    android:text="（请输入地址和时间等信息）"
+                    />
+            </LinearLayout>
+
+            <!--购买地址-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="购买地址"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="选填，不填则视为同意跑腿小哥就近购买"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--详细地址-->
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_38"
+                android:layout_marginTop="@dimen/dp_12"
+                android:background="@drawable/border_rect_grey"
+                android:gravity="left|center_vertical"
+                android:hint="选填，可输入详细地址，如：门牌号"
+                android:padding="@dimen/dp_8"
+                android:textColor="@color/text_dark_gray"
+                android:textSize="@dimen/sp_14"
+                />
+
+            <!--取货地址-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_14">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="取货地址"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="必填"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--收货地址-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_14">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="收货地址"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="必填"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--送达时间-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="送达时间"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="尽快送达"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--特别注意事项-->
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginTop="@dimen/dp_38"
+                android:background="@drawable/border_rect_grey"
+                android:gravity="left|top"
+                android:hint="选填，可输入特别注意事项（50字以内）"
+                android:maxLength="50"
+                android:padding="@dimen/dp_8"
+                android:textColor="@color/text_dark_gray"
+                android:textSize="@dimen/sp_14"
+                />
+
+            <!--        费用      -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/dp_40">
+
+                <TextView
+                    style="@style/text_16_black"
+                    android:layout_marginBottom="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:text="费用"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_marginBottom="@dimen/dp_12"
+                    android:layout_marginTop="@dimen/dp_12"
+                    android:paddingLeft="@dimen/dp_2"
+                    android:text="（请认真核对费用明细）"
+                    />
+            </LinearLayout>
+
+            <!--配送费-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="配送费"/>
+
+                <ImageView
+                    android:layout_width="@dimen/dp_16"
+                    android:layout_height="@dimen/dp_16"
+                    android:src="@drawable/ic_tip_grey_white"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_gravity="center_vertical"/>
+                <include layout="@layout/space_h"/>
+                <TextView
+                    style="@style/text_14_red"
+                    android:text="￥0.00"
+                    android:layout_marginRight="@dimen/dp_2"
+                    />
+            </LinearLayout>
+
+            <!--优惠券-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="优惠券"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="无可用"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+            <!--打赏费-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <TextView
+                    style="@style/text_16_grey"
+                    android:text="打赏费"/>
+
+                <TextView
+                    style="@style/text_14_dark_gray"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="加点打赏费，跑腿小哥抢单更用动力哦"
+                    />
+
+                <ImageView
+                    style="@style/arrow_right"
+                    android:layout_marginRight="1px"/>
+            </LinearLayout>
+
+
+            <!--同城鸽跑腿协议-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/dp_32"
+                android:layout_marginBottom="@dimen/dp_20"
+                android:orientation="horizontal">
+
+                <cn.czyugang.tcg.client.widget.SelectButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"/>
+
+                <TextView
+                    style="@style/text_12_dark_gray"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="同意并接受"/>
+
+                <TextView
+                    style="@style/text_12_white"
+                    android:text="《同城鸽跑腿协议》"
+                    android:textColor="@color/main_light_blue"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <LinearLayout
+        style="@style/item_50_group">
+
+        <include layout="@layout/space_h"/>
+
+        <TextView
+            style="@style/text_14_black"
+            android:text="实付款："/>
+
+        <TextView
+            style="@style/text_14_red"
+            android:layout_marginRight="@dimen/dp_10"
+            android:text="￥0.00"/>
+
+        <TextView
+            style="@style/text_16_white"
+            android:layout_width="@dimen/dp_85"
+            android:layout_height="match_parent"
+            android:background="@color/main_red"
+            android:gravity="center"
+            android:text="提交订单"/>
+    </LinearLayout>
+
 </LinearLayout>
