--- a/app/src/main/res/layout/item_store_goods_two.xml
+++ b/app/src/main/res/layout/item_store_goods_two.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingRight="@dimen/dp_10"
-    android:paddingTop="@dimen/dp_10"
+    android:paddingTop="@dimen/dp_6"
+    android:paddingBottom="@dimen/dp_6"
     android:orientation="vertical">
 
     <cn.czyugang.tcg.client.utils.img.ImgView
