我的关注，资讯栏目接口补全，资讯资料接口部分

--- a/app/src/main/res/layout/activity_inform_order_column_msg.xml
+++ b/app/src/main/res/layout/activity_inform_order_column_msg.xml
@@ -67,6 +67,7 @@
                     android:layout_alignParentRight="true"
                     android:paddingRight="@dimen/dp_5">
                     <TextView
+                        android:id="@+id/inform_order_follownum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2584"
