--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -118,7 +118,7 @@
                         android:id="@+id/score_sign_tip"
                         style="@style/text_12_gray"
                         android:layout_marginLeft="@dimen/dp_15"
-                        android:text="已连续签到3666天"
+                        android:text=""
                         />
 
                     <include layout="@layout/space_h"/>
